packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/search_definition_payload.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "candidateCount": 2,
  "definition": {
    "crateName": "demo",
    "language": "rust",
    "lineEnd": 3,
    "lineStart": 1,
    "name": "AlphaService",
    "path": "packages/rust/crates/demo/src/service.rs",
    "projectName": "kernel",
    "rootLabel": "packages",
    "score": 1.15,
    "signature": "pub struct AlphaService {"
  },
  "navigationTarget": {
    "category": "doc",
    "column": null,
    "line": 1,
    "lineEnd": 3,
    "path": "packages/rust/crates/demo/src/service.rs",
    "projectName": "kernel",
    "rootLabel": "packages"
  },
  "query": "AlphaService",
  "selectedScope": "definition",
  "sourceLine": 2,
  "sourcePath": "packages/rust/crates/demo/src/lib.rs"
}
