packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/search_display_paths_payload.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 9
expression: value
---
{
  "hitCount": 2,
  "paths": [
    "docs/alpha.md",
    "docs/beta.md"
  ],
  "query": "wendao",
  "selectedMode": "graph_fts"
}
